tests/error/protocol_errors/function_body.err
Error: Unexpected function body (at $FILE:7:4)
  | 
5 | class MyProto:
7 |     def foo(self: "MyProto", x: int) -> str:
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |         return "abcdef"
  | ^^^^^^^^^^^^^^^^^^^^^^^ Unexpected function body in protocol definition

Help: Add a `@guppy.declare` annotation and leave the body empty to turn this
into a declaration

Guppy compilation failed due to 1 previous error
